src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__concat_idents! (peek it_matches_tokens_after_interlace).snap
---
source: src/type_atoms/adt/interlace.rs
expression: "crate::test_peek::<P<(Interlace<Ident, P<(FJointPunct<':'>, FPunct<':'>)>>,\n        P<(FPunct<'>'>, FPunct<';'>)>)>>(q.clone())"
---
Some(
    3,
)
