src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__concat_idents! (peek it_matches_trailing).snap
---
source: src/type_atoms/adt/interlace.rs
expression: "crate::test_peek::<InterlaceTrail<Ident, FPunct<','>>>(q.clone())"
---
Some(
    3,
)
