src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__it_matches_comma_seperation.snap
---
source: src/type_atoms/adt/interlace.rs
expression: "(insta_match_test!(+ parse Interlace<Ident, FPunct<','>> : hello, world, hi,\n        there,),\n    insta_match_test!(* peek Interlace<Ident, FPunct<','>> : hello, world, hi,\n        there,))"
---
(
    Ok(
        Interlace {
            values: [
                Ident(
                    hello,
                ),
                Ident(
                    world,
                ),
                Ident(
                    hi,
                ),
                Ident(
                    there,
                ),
            ],
        },
    ),
    Some(
        7,
    ),
)
