src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__it_matches_empty.snap
---
source: src/type_atoms/adt/interlace.rs
expression: "(insta_match_test!(+ parse Interlace<Ident, FPunct<','>> :),\n    insta_match_test!(* peek Interlace<Ident, FPunct<','>> :))"
---
(
    Ok(
        Interlace {
            values: [],
        },
    ),
    Some(
        0,
    ),
)
