src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__it_matches_esoterics.snap
---
source: src/type_atoms/adt/interlace.rs
expression: "(insta_match_test!(+ parse Interlace<(Ident, Option<(Two, Ident)>), Two> : r1\n        :: r2 :: r3 :: r4 :: r5),\n    insta_match_test!(* peek Interlace<(Ident, Option<(Two, Ident)>), Two> :\n        r1 :: r2 :: r3 :: r4 :: r5))"
---
(
    Ok(
        Interlace {
            values: [
                (
                    Ident(
                        r1,
                    ),
                    Some(
                        (
                            (
                                FPunct(
                                    Span,
                                ),
                                FPunct(
                                    Span,
                                ),
                            ),
                            Ident(
                                r2,
                            ),
                        ),
                    ),
                ),
                (
                    Ident(
                        r3,
                    ),
                    Some(
                        (
                            (
                                FPunct(
                                    Span,
                                ),
                                FPunct(
                                    Span,
                                ),
                            ),
                            Ident(
                                r4,
                            ),
                        ),
                    ),
                ),
                (
                    Ident(
                        r5,
                    ),
                    None,
                ),
            ],
        },
    ),
    Some(
        13,
    ),
)
