src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__it_matches_tokens_after_interlace.snap
---
source: src/type_atoms/adt/interlace.rs
expression: "(insta_match_test!(+ parse\n        (Interlace<Ident, (FJointPunct<':'>, FPunct<':'>)>,\n(FPunct<'>'>, FPunct<';'>))\n        : hello > ;),\n    insta_match_test!(* peek\n        (Interlace<Ident, (FJointPunct<':'>, FPunct<':'>)>,\n(FPunct<'>'>, FPunct<';'>))\n        : hello > ;))"
---
(
    Ok(
        (
            Interlace {
                values: [
                    Ident(
                        hello,
                    ),
                ],
            },
            (
                FPunct(
                    Span,
                ),
                FPunct(
                    Span,
                ),
            ),
        ),
    ),
    Some(
        3,
    ),
)
