src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__it_matches_trailing_with.snap
---
source: src/type_atoms/adt/interlace.rs
expression: "(insta_match_test!(+ parse InterlaceTrail<Ident, FPunct<','>> : hi, hello,),\n    insta_match_test!(* peek InterlaceTrail<Ident, FPunct<','>> : hi, hello,))"
---
(
    Ok(
        Interlace {
            values: [
                Ident(
                    hi,
                ),
                Ident(
                    hello,
                ),
            ],
        },
    ),
    Some(
        4,
    ),
)
